--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,32 +1,17 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <nav>
-    <a [routerLink]="['scala']">
-      <img width="450" height="300" src="../assets/scala.png">
-    </a>
-    <a [routerLink]="['play']">
-      <img width="400" height="300" src="../assets/play.svg">
-    </a>
-    <a [routerLink]="['angular']">
-      <img width="300" src="../assets/angular.svg">
-    </a>
-  </nav>
-  <router-outlet></router-outlet>
-  <div>
-    <h2>Check out the project on GitHub for more information</h2>
-    <h3>
-      <a target="_blank" rel="noopener" href="https://github.com/yohangz/scala-play-angular-seed">
-        scala-play-angular-seed
-      </a>
-    </h3>
-  </div>
-
-  <div class="post-request-test">
-    <h3>Test Post Request</h3>
-    <button (click)="postData()">ClickMe :)</button>
-    <h5>Response: {{postRequestResponse}}</h5>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">THE THING</a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="/dash/charts" routerLinkActive="active">Dashboard</a>
+    </li>
+  </ul>
+</nav>
+<div class="container">
+  <div class="row">
+    <div class="col-2"></div>
+    <div class="col-8">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-2"></div>
   </div>
 </div>
