--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,17 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" href="#">THE THING</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
+  <ul class="navbar-nav">
+    <li class="nav-item">
       <a class="nav-link" routerLink="/dash/charts" routerLinkActive="active">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/profit-estimation" routerLinkActive="active">Profit estimation</a>
     </li>
   </ul>
 </nav>
-<div class="container">
-  <div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
-      <router-outlet></router-outlet>
-    </div>
-    <div class="col-2"></div>
+<div class="container-fluid">
+  <div class="card jh-card">
+    <router-outlet></router-outlet>
   </div>
 </div>
