--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,7 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <img class="navbar-brand" href="#" src="../assets/logo.png" width="50" height="50"/>
   <a class="navbar-brand" href="#">THE THING</a>
   <ul class="navbar-nav">
     <li class="nav-item">
