--- a/ui/src/app/dashboard/charts/charts.component.html
+++ b/ui/src/app/dashboard/charts/charts.component.html
@@ -1,15 +1,45 @@
-<h1>Dashboard</h1>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-8"></div>
-    <div class="col-2">
-      <div class="form-group">
+<div class="row justify-content-center">
+
+  <div class="col-10">
+
+    <div class="row">
+      <h1>Dashboard</h1>
+    </div>
+
+    <label class="form-control-label">Currency: </label>
+    <div class="row">
+      <div class="col-11">
         <select class="form-control" required [(ngModel)]="newCurrency" name="newCurrency">
-          <option *ngFor="let curr of availableCurrencies" [value]="curr">{{curr}} </option>
+          <option *ngFor="let curr of currencies" [value]="curr.code">{{curr.code + " " + curr.currencyName}} </option>
         </select>
       </div>
+        <button class=" col-1 btn btn-primary" (click)="addChart()">Add</button>
     </div>
-    <button class="col-2" (click)="addChart">ADD</button>
-  </div>
 
+    <br>
+
+    <div class="row chart-list" cdkDropList (cdkDropListDropped)="onDrop($event)">
+        <div *ngFor="let chart of charts; let i = index" class="col-12" cdkDrag>
+          <div class="input-group mb-3">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" (click)="deleteChart(i)">
+                <i class="far fa-trash-alt "></i>
+              </button>
+            </div>
+            <input type="text" class="form-control uneditable-textarea border-0" value="{{chart.currencyName}}">
+          </div>
+
+
+          <div class="row ">
+            <canvas baseChart
+                    [data]="chart.data"
+                    [options]="chart.options"
+                    [chartType]="chart.type"
+                    [legend]="false">
+            </canvas>
+          </div>
+      </div>
+    </div>
+
+  </div>
 </div>
