--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -5,7 +5,7 @@
   <a class="navbar-brand" href="#">THE THING</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/dash/charts" routerLinkActive="active">Dashboard</a>
+      <a class="nav-link" routerLink="/dash/charts"  [state]="{user: user}" routerLinkActive="active">Dashboard</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/profit-estimation" routerLinkActive="active">Profit estimation</a>
