Small routing fixes

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <img class="navbar-brand" href="#" src="../assets/logo.png" width="50" height="50"/>
-  <a class="navbar-brand" href="#">THE THING</a>
+  <img class="navbar-brand" routerLink="/" src="../assets/logo.png" width="50" height="50"/>
+  <a class="navbar-brand" routerLink="/">THE THING</a>
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" routerLink="/dash/charts"  [state]="{user: user}" routerLinkActive="active">Dashboard</a>
